--- a/src/globals.css
+++ b/src/globals.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Radley', sans-serif;
-     max-width: 1440px;
+    /*max-width: 1440px;*/
     margin: 0 auto;
     width: 100%;
   }
